Revision history for BioX-Writer

{{$NEXT}}

0.07  2015-11-11 10:39:37 GST
    - Added in a feature for all local variables to evaluated in process template, not just INPUT/OUTPUT
    - INPUT/OUTPUT, indir/outdir are still special variables
    - Can now do things like
    - local:
        - MYLOCALTHING: "{$self->indir}/{$sample}_MYLOCALTHING.txt"

0.05  2015-11-10 11:53:21 GST
    - Missing carp::always
    - Commited bug fix with camelized rules - rule_R1 was being changed to rule_r1 in file changes

0.04  2015-11-10 10:02:44 GST
    - Missing dep in cpanfile

0.03  2015-11-09 12:54:58 GST
    - Added in some support for different output structures

0.02  2015-11-09 11:58:29 GST
    - Commiting bug fix. INPUT/OUTPUT should not be required

0.01  2015-06-23 12:41:10 AST
    - Initial release